# abcg

./: .gitignore  index.html
examples/: CMakeLists.txt
examples/asteroids/: bullets.cpp  bullets.hpp  window.cpp  window.hpp
examples/attentioneval3d/: CMakeLists.txt  README.md  background.cpp  background.hpp  distraction_objects.cpp  distraction_objects.hpp  game_objects.cpp  game_objects.hpp  imfilebrowser.h  main.cpp  model.cpp  model.hpp  window.cpp  window.hpp
examples/attentioneval3d copy/: CMakeLists.txt  README.md  game_objects.hpp  window.cpp  window.hpp
examples/attentioneval3d copy/assets/: bird.mtl
examples/attentioneval3d/assets/: bird.mtl  block.mtl  texture.frag  wicker_basket.mtl
examples/attentioneval3d/assets/shaders/: skybox.frag  skybox.vert
examples/attentiongame3d/: CMakeLists.txt  README.md  Readme.md  game_objects.cpp  game_objects.hpp  gamedata.hpp  model.hpp  window.cpp  window.hpp
examples/attentiongame3d/assets/: bird.mtl
examples/attentiontraining/: CMakeLists.txt  README.md  background.cpp  background.hpp  distraction_objects.cpp  distraction_objects.hpp  gamedata.hpp  main.cpp  target_objects.cpp  target_objects.hpp  window.cpp  window.hpp
examples/attentiontraining3d/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  distraction_objects.hpp  gamedata.hpp  ground.cpp  ground.hpp  model.cpp  model.hpp  target_objects.cpp  window.cpp  window.hpp
examples/attentiontraining3d/assets/: Grass_Block.mtl  Mineways2Skfb.mtl  sand.mtl
examples/coloredtriangles/: window.cpp  window.hpp
examples/firstapp/: window.cpp
(+35 files in other folders)
