#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(tictactoe)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids)
#add_subdirectory(attentiontraining)
#add_subdirectory(attentiontraining3d)
add_subdirectory(attentioneval3d)